// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`@podo/web > renders button slots, states, and activation event 1`] = `
"<style>:host {
  box-sizing: border-box;
  font: inherit;
}

:host([fill]) {
  display: block;
  width: 100%;
}

button,
input {
  box-sizing: border-box;
  font: inherit;
}

.podo-button {
  align-items: center;
  justify-content: center;
  background: var(--podo-button-root-background, #426CED);
  border: 1px solid var(--podo-button-root-borderColor, transparent);
  border-radius: 10px;
  color: var(--podo-button-label-color, #FFFFFF);
  cursor: pointer;
  display: inline-flex;
  font-family: var(--podo-typography-body-medium-fontFamily, "Pretendard", sans-serif);
  font-weight: 400;
  gap: 6px;
  line-height: 1.6;
  min-height: 42px;
  min-width: 80px;
  padding: 2px 16px;
}

.podo-button__icon {
  align-items: center;
  color: var(--podo-button-icon-color, var(--podo-button-label-color, currentColor));
  display: inline-flex;
}

/* fill stretches the button to the parent's full width (auto-layout fill). */
.podo-button[data-fill="true"] {
  width: 100%;
}

/* Sizes (Figma: xs 32 / sm 36 / md 42 / lg 52) */
.podo-button[data-size="xs"] {
  border-radius: 6px;
  font-size: 14px;
  min-height: 32px;
  padding: 2px 10px;
}
.podo-button[data-size="sm"] {
  border-radius: 8px;
  font-size: 14px;
  min-height: 36px;
  padding: 2px 16px;
}
.podo-button[data-size="md"] {
  border-radius: 10px;
  font-size: 16px;
  min-height: 42px;
  padding: 2px 16px;
}
.podo-button[data-size="lg"] {
  border-radius: 12px;
  font-size: 16px;
  min-height: 52px;
  padding: 2px 20px;
}

/* Themes (Figma solid/outline x primary/assistive/white) */
.podo-button[data-theme="solid-primary"] {
  --podo-button-root-background: #426CED;
  --podo-button-label-color: #FFFFFF;
}
.podo-button[data-theme="solid-primary"]:hover:not([disabled]) {
  --podo-button-root-background: #1245E2;
}
.podo-button[data-theme="solid-primary"]:active:not([disabled]) {
  --podo-button-root-background: #123BBA;
}
.podo-button[data-theme="solid-assistive"] {
  --podo-button-root-background: #F4F4F5;
  --podo-button-label-color: #18181B;
}
.podo-button[data-theme="solid-assistive"]:hover:not([disabled]) {
  --podo-button-root-background: #E4E4E7;
}
.podo-button[data-theme="solid-white"] {
  --podo-button-root-background: #FFFFFF;
  --podo-button-label-color: #18181B;
}
.podo-button[data-theme="solid-white"]:hover:not([disabled]) {
  --podo-button-root-background: #F4F4F5;
}
.podo-button[data-theme="outline-primary"] {
  --podo-button-root-background: #FFFFFF;
  --podo-button-root-borderColor: #426CED;
  --podo-button-label-color: #426CED;
}
.podo-button[data-theme="outline-primary"]:hover:not([disabled]) {
  --podo-button-root-background: #F4F7FE;
}
.podo-button[data-theme="outline-assistive"] {
  --podo-button-root-background: #F9F9F9;
  --podo-button-root-borderColor: #D1D2D6;
  --podo-button-label-color: #18181B;
}
.podo-button[data-theme="outline-assistive"]:hover:not([disabled]) {
  --podo-button-root-background: #F4F4F5;
}
.podo-button[data-theme="outline-white"] {
  --podo-button-root-background: #FFFFFF;
  --podo-button-root-borderColor: #D1D2D6;
  --podo-button-label-color: #18181B;
}
.podo-button[data-theme="outline-white"]:hover:not([disabled]) {
  --podo-button-root-background: #F9F9F9;
}

.podo-button:focus-visible {
  outline: 2px solid #426CED;
  outline-offset: 2px;
}

.podo-button[disabled] {
  --podo-button-root-background: #E4E4E7;
  --podo-button-root-borderColor: transparent;
  --podo-button-label-color: #9FA2AD;
  cursor: not-allowed;
}

/* Chip (Figma 538:6615): pill tag with prefix/suffix icon slots. */
.podo-chip {
  align-items: center;
  background: var(--podo-chip-root-background, #3E424B);
  border: 1px solid var(--podo-chip-root-borderColor, transparent);
  border-radius: 9999px;
  color: var(--podo-chip-label-color, #FFFFFF);
  cursor: pointer;
  display: inline-flex;
  font-family: var(--podo-typography-body-medium-fontFamily, "Pretendard", sans-serif);
  font-size: 16px;
  font-weight: 400;
  gap: 4px;
  justify-content: center;
  line-height: 1.6;
  min-width: 55px;
  padding: 2px 8px;
}

.podo-chip[data-size="sm"] {
  font-size: 13px;
}

/* Figma outline-strong currently renders identically to solid (filled
   gray.70); mirrored as-is pending a design fix. */
.podo-chip[data-theme="outline-strong"] {
  --podo-chip-root-background: #3E424B;
  --podo-chip-label-color: #FFFFFF;
}

.podo-chip[data-theme="outline-weak"] {
  --podo-chip-root-background: #F9F9F9;
  --podo-chip-root-borderColor: #767985;
  --podo-chip-label-color: #18181B;
}

.podo-chip[data-theme="solid"]:active:not([disabled]),
.podo-chip[data-theme="outline-strong"]:active:not([disabled]) {
  --podo-chip-root-background: #767985;
}

.podo-chip:focus-visible {
  outline: 2px solid #426CED;
  outline-offset: 2px;
}

.podo-chip[disabled] {
  --podo-chip-root-background: #E4E4E7;
  --podo-chip-root-borderColor: transparent;
  --podo-chip-label-color: #9FA2AD;
  cursor: not-allowed;
}

.podo-chip__prefix,
.podo-chip__suffix {
  align-items: center;
  color: var(--podo-chip-label-color, currentColor);
  display: inline-flex;
  justify-content: center;
}

.podo-chip__prefix {
  height: 24px;
  width: 24px;
}

.podo-chip__suffix {
  height: 20px;
  width: 20px;
}

.podo-chip[data-size="sm"] .podo-chip__prefix,
.podo-chip[data-size="sm"] .podo-chip__suffix {
  height: 16px;
  width: 16px;
}

/* Switch (Figma 338:2464): pill track with a shadowed sliding handle.
   sm 30x18/handle 14, md 40x24/handle 20 (base), lg 56x32/handle 25. */
.podo-switch {
  background: var(--podo-switch-root-background, #D1D2D6);
  border: 0;
  border-radius: 9999px;
  cursor: pointer;
  display: inline-block;
  padding: 0;
  position: relative;
  transition: background 0.15s ease;
}

.podo-switch__handle {
  background: var(--podo-switch-handle-background, #FFFFFF);
  border-radius: 9999px;
  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.08);
  left: 2px;
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
  transition: left 0.15s ease;
}

.podo-switch[data-size="sm"] {
  height: 18px;
  width: 30px;
}
.podo-switch[data-size="sm"] .podo-switch__handle {
  height: 14px;
  width: 14px;
}
.podo-switch[data-size="sm"][data-state="on"] .podo-switch__handle {
  left: 14px;
}

.podo-switch[data-size="md"] {
  height: 24px;
  width: 40px;
}
.podo-switch[data-size="md"] .podo-switch__handle {
  height: 20px;
  width: 20px;
}
.podo-switch[data-size="md"][data-state="on"] .podo-switch__handle {
  left: 18px;
}

.podo-switch[data-size="lg"] {
  height: 32px;
  width: 56px;
}
.podo-switch[data-size="lg"] .podo-switch__handle {
  height: 25px;
  left: 4px;
  width: 25px;
}
.podo-switch[data-size="lg"][data-state="on"] .podo-switch__handle {
  left: 27px;
}

.podo-switch[data-state="on"] {
  --podo-switch-root-background: #426CED;
}

.podo-switch:focus-visible {
  outline: 2px solid #426CED;
  outline-offset: 2px;
}

.podo-switch[disabled] {
  --podo-switch-root-background: #E4E4E7;
  --podo-switch-handle-background: #D1D2D6;
  cursor: not-allowed;
}

.podo-switch[disabled] .podo-switch__handle {
  box-shadow: none;
}

/* Input (Figma 538:6693): wrapper carries the box + states, the inner control
   is borderless so prefix/suffix content can live inside the input. */
.podo-input {
  align-items: center;
  background: var(--podo-input-root-background, var(--podo-component-input-background, #FFFFFF));
  border: 1px solid
    var(--podo-input-root-borderColor, var(--podo-component-input-border, #E4E4E7));
  border-radius: 10px;
  display: flex;
  font-size: 16px;
  gap: 6px;
  line-height: 1.6;
  min-height: 42px;
  padding: 0 10px 0 16px;
}

.podo-input[data-size="lg"] {
  border-radius: 12px;
  min-height: 52px;
}

.podo-input:hover:not([data-state]):not(:focus-within) {
  border-color: var(--podo-semantic-color-text-muted, #9FA2AD);
}

/* Figma focused = 2px primary border; inset shadow adds the second pixel
   without shifting layout. */
.podo-input:focus-within:not([data-state="disabled"]) {
  border-color: #426CED;
  box-shadow: inset 0 0 0 1px #426CED;
}

.podo-input[data-state="invalid"] {
  border-color: var(--podo-semantic-color-text-danger, #F23B3B);
}

.podo-input[data-state="disabled"] {
  background: #E4E4E7;
  border-color: #D1D2D6;
}

.podo-input__control {
  background: transparent;
  border: 0;
  color: var(--podo-input-text-color, var(--podo-semantic-color-text-default, #18181B));
  flex: 1 1 0;
  font: inherit;
  min-width: 0;
  outline: none;
  padding: 0;
}

.podo-input__control::placeholder {
  color: var(--podo-semantic-color-text-muted, #9FA2AD);
}

.podo-input[data-state="disabled"] .podo-input__control {
  color: #9FA2AD;
  cursor: not-allowed;
}

.podo-input__prefix,
.podo-input__suffix-icon {
  align-items: center;
  color: var(--podo-semantic-color-text-muted, #9FA2AD);
  display: inline-flex;
  height: 24px;
  justify-content: center;
  width: 24px;
}

/* Icons sharpen from muted to gray.50 while the value is being edited
   (Figma icon/subtil #767985). */
.podo-input:focus-within .podo-input__prefix,
.podo-input:focus-within .podo-input__suffix-icon {
  color: #767985;
}

.podo-input__suffix-text {
  color: var(--podo-input-suffix-text-color, var(--podo-semantic-color-text-subtle, #50555E));
}

/* Field (Figma 538:6691): heading(label + requirement + sub-label + suffix-icon),
   free control slot, footer(helper-text/error + character count). */
.podo-field {
  display: flex;
  flex-direction: column;
  gap: var(--podo-spacing-component-field-gap, 6px);
}

.podo-field__heading {
  align-items: center;
  display: flex;
  gap: 2px;
}

.podo-field__label {
  align-items: baseline;
  color: var(--podo-field-label-color, var(--podo-semantic-color-text-subtle, #50555E));
  display: inline-flex;
  flex: 1 1 0;
  font-size: 14px;
  font-weight: 600;
  gap: 2px;
  line-height: 1.6;
}

.podo-field__requirement {
  color: var(--podo-field-requirement-color, var(--podo-semantic-color-text-danger, #F23B3B));
  font-size: 13px;
  font-weight: 600;
}

.podo-field__sub-label {
  color: var(--podo-field-sub-label-color, var(--podo-semantic-color-text-muted, #9FA2AD));
  font-size: 13px;
  font-weight: 400;
}

.podo-field__suffix-icon {
  align-items: center;
  color: var(--podo-semantic-color-text-subtle, #50555E);
  display: inline-flex;
  height: 20px;
  justify-content: center;
  width: 20px;
}

.podo-field__footer {
  align-items: center;
  display: flex;
  font-size: 14px;
  gap: 2px;
  line-height: 1.6;
}

.podo-field__helper-text {
  color: var(--podo-field-helper-text-color, var(--podo-semantic-color-text-muted, #9FA2AD));
  flex: 1 1 0;
}

.podo-field__error {
  color: var(--podo-field-error-color, var(--podo-semantic-color-text-danger, #F23B3B));
  flex: 1 1 0;
}

.podo-field__count {
  color: var(--podo-field-count-color, var(--podo-semantic-color-text-muted, #9FA2AD));
  margin-left: auto;
}

.podo-icon {
  color: var(--podo-icon-glyph-color, var(--podo-semantic-color-text-default, currentColor));
  font-family: "PodoIcons";
  line-height: 1;
}

.podo-text {
  color: var(--podo-typography-root-color, var(--podo-semantic-color-text-default, #14151A));
  font-family: var(--podo-typography-body-medium-fontFamily, inherit);
  font-size: var(--podo-typography-body-medium-fontSize, 1rem);
  line-height: var(--podo-typography-body-medium-lineHeight, 1.5);
}

.podo-text[data-as="h1"] {
  font-family: var(--podo-typography-heading-xlarge-fontFamily, inherit);
  font-size: var(--podo-typography-heading-xlarge-fontSize, 2rem);
  font-weight: var(--podo-typography-heading-xlarge-fontWeight, 700);
  line-height: var(--podo-typography-heading-xlarge-lineHeight, 1.2);
}</style>
<button class="podo-button" part="root" data-theme="solid-primary" data-size="md">
  <span class="podo-button__icon" part="prefix"><slot name="prefix"></slot></span>
  <span part="label"><slot></slot></span>
  <span class="podo-button__icon" part="suffix"><slot name="suffix"></slot></span>
</button>"
`;

exports[`@podo/web > renders input, field, icon, and typography components > chip 1`] = `
"<style>:host {
  box-sizing: border-box;
  font: inherit;
}

:host([fill]) {
  display: block;
  width: 100%;
}

button,
input {
  box-sizing: border-box;
  font: inherit;
}

.podo-button {
  align-items: center;
  justify-content: center;
  background: var(--podo-button-root-background, #426CED);
  border: 1px solid var(--podo-button-root-borderColor, transparent);
  border-radius: 10px;
  color: var(--podo-button-label-color, #FFFFFF);
  cursor: pointer;
  display: inline-flex;
  font-family: var(--podo-typography-body-medium-fontFamily, "Pretendard", sans-serif);
  font-weight: 400;
  gap: 6px;
  line-height: 1.6;
  min-height: 42px;
  min-width: 80px;
  padding: 2px 16px;
}

.podo-button__icon {
  align-items: center;
  color: var(--podo-button-icon-color, var(--podo-button-label-color, currentColor));
  display: inline-flex;
}

/* fill stretches the button to the parent's full width (auto-layout fill). */
.podo-button[data-fill="true"] {
  width: 100%;
}

/* Sizes (Figma: xs 32 / sm 36 / md 42 / lg 52) */
.podo-button[data-size="xs"] {
  border-radius: 6px;
  font-size: 14px;
  min-height: 32px;
  padding: 2px 10px;
}
.podo-button[data-size="sm"] {
  border-radius: 8px;
  font-size: 14px;
  min-height: 36px;
  padding: 2px 16px;
}
.podo-button[data-size="md"] {
  border-radius: 10px;
  font-size: 16px;
  min-height: 42px;
  padding: 2px 16px;
}
.podo-button[data-size="lg"] {
  border-radius: 12px;
  font-size: 16px;
  min-height: 52px;
  padding: 2px 20px;
}

/* Themes (Figma solid/outline x primary/assistive/white) */
.podo-button[data-theme="solid-primary"] {
  --podo-button-root-background: #426CED;
  --podo-button-label-color: #FFFFFF;
}
.podo-button[data-theme="solid-primary"]:hover:not([disabled]) {
  --podo-button-root-background: #1245E2;
}
.podo-button[data-theme="solid-primary"]:active:not([disabled]) {
  --podo-button-root-background: #123BBA;
}
.podo-button[data-theme="solid-assistive"] {
  --podo-button-root-background: #F4F4F5;
  --podo-button-label-color: #18181B;
}
.podo-button[data-theme="solid-assistive"]:hover:not([disabled]) {
  --podo-button-root-background: #E4E4E7;
}
.podo-button[data-theme="solid-white"] {
  --podo-button-root-background: #FFFFFF;
  --podo-button-label-color: #18181B;
}
.podo-button[data-theme="solid-white"]:hover:not([disabled]) {
  --podo-button-root-background: #F4F4F5;
}
.podo-button[data-theme="outline-primary"] {
  --podo-button-root-background: #FFFFFF;
  --podo-button-root-borderColor: #426CED;
  --podo-button-label-color: #426CED;
}
.podo-button[data-theme="outline-primary"]:hover:not([disabled]) {
  --podo-button-root-background: #F4F7FE;
}
.podo-button[data-theme="outline-assistive"] {
  --podo-button-root-background: #F9F9F9;
  --podo-button-root-borderColor: #D1D2D6;
  --podo-button-label-color: #18181B;
}
.podo-button[data-theme="outline-assistive"]:hover:not([disabled]) {
  --podo-button-root-background: #F4F4F5;
}
.podo-button[data-theme="outline-white"] {
  --podo-button-root-background: #FFFFFF;
  --podo-button-root-borderColor: #D1D2D6;
  --podo-button-label-color: #18181B;
}
.podo-button[data-theme="outline-white"]:hover:not([disabled]) {
  --podo-button-root-background: #F9F9F9;
}

.podo-button:focus-visible {
  outline: 2px solid #426CED;
  outline-offset: 2px;
}

.podo-button[disabled] {
  --podo-button-root-background: #E4E4E7;
  --podo-button-root-borderColor: transparent;
  --podo-button-label-color: #9FA2AD;
  cursor: not-allowed;
}

/* Chip (Figma 538:6615): pill tag with prefix/suffix icon slots. */
.podo-chip {
  align-items: center;
  background: var(--podo-chip-root-background, #3E424B);
  border: 1px solid var(--podo-chip-root-borderColor, transparent);
  border-radius: 9999px;
  color: var(--podo-chip-label-color, #FFFFFF);
  cursor: pointer;
  display: inline-flex;
  font-family: var(--podo-typography-body-medium-fontFamily, "Pretendard", sans-serif);
  font-size: 16px;
  font-weight: 400;
  gap: 4px;
  justify-content: center;
  line-height: 1.6;
  min-width: 55px;
  padding: 2px 8px;
}

.podo-chip[data-size="sm"] {
  font-size: 13px;
}

/* Figma outline-strong currently renders identically to solid (filled
   gray.70); mirrored as-is pending a design fix. */
.podo-chip[data-theme="outline-strong"] {
  --podo-chip-root-background: #3E424B;
  --podo-chip-label-color: #FFFFFF;
}

.podo-chip[data-theme="outline-weak"] {
  --podo-chip-root-background: #F9F9F9;
  --podo-chip-root-borderColor: #767985;
  --podo-chip-label-color: #18181B;
}

.podo-chip[data-theme="solid"]:active:not([disabled]),
.podo-chip[data-theme="outline-strong"]:active:not([disabled]) {
  --podo-chip-root-background: #767985;
}

.podo-chip:focus-visible {
  outline: 2px solid #426CED;
  outline-offset: 2px;
}

.podo-chip[disabled] {
  --podo-chip-root-background: #E4E4E7;
  --podo-chip-root-borderColor: transparent;
  --podo-chip-label-color: #9FA2AD;
  cursor: not-allowed;
}

.podo-chip__prefix,
.podo-chip__suffix {
  align-items: center;
  color: var(--podo-chip-label-color, currentColor);
  display: inline-flex;
  justify-content: center;
}

.podo-chip__prefix {
  height: 24px;
  width: 24px;
}

.podo-chip__suffix {
  height: 20px;
  width: 20px;
}

.podo-chip[data-size="sm"] .podo-chip__prefix,
.podo-chip[data-size="sm"] .podo-chip__suffix {
  height: 16px;
  width: 16px;
}

/* Switch (Figma 338:2464): pill track with a shadowed sliding handle.
   sm 30x18/handle 14, md 40x24/handle 20 (base), lg 56x32/handle 25. */
.podo-switch {
  background: var(--podo-switch-root-background, #D1D2D6);
  border: 0;
  border-radius: 9999px;
  cursor: pointer;
  display: inline-block;
  padding: 0;
  position: relative;
  transition: background 0.15s ease;
}

.podo-switch__handle {
  background: var(--podo-switch-handle-background, #FFFFFF);
  border-radius: 9999px;
  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.08);
  left: 2px;
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
  transition: left 0.15s ease;
}

.podo-switch[data-size="sm"] {
  height: 18px;
  width: 30px;
}
.podo-switch[data-size="sm"] .podo-switch__handle {
  height: 14px;
  width: 14px;
}
.podo-switch[data-size="sm"][data-state="on"] .podo-switch__handle {
  left: 14px;
}

.podo-switch[data-size="md"] {
  height: 24px;
  width: 40px;
}
.podo-switch[data-size="md"] .podo-switch__handle {
  height: 20px;
  width: 20px;
}
.podo-switch[data-size="md"][data-state="on"] .podo-switch__handle {
  left: 18px;
}

.podo-switch[data-size="lg"] {
  height: 32px;
  width: 56px;
}
.podo-switch[data-size="lg"] .podo-switch__handle {
  height: 25px;
  left: 4px;
  width: 25px;
}
.podo-switch[data-size="lg"][data-state="on"] .podo-switch__handle {
  left: 27px;
}

.podo-switch[data-state="on"] {
  --podo-switch-root-background: #426CED;
}

.podo-switch:focus-visible {
  outline: 2px solid #426CED;
  outline-offset: 2px;
}

.podo-switch[disabled] {
  --podo-switch-root-background: #E4E4E7;
  --podo-switch-handle-background: #D1D2D6;
  cursor: not-allowed;
}

.podo-switch[disabled] .podo-switch__handle {
  box-shadow: none;
}

/* Input (Figma 538:6693): wrapper carries the box + states, the inner control
   is borderless so prefix/suffix content can live inside the input. */
.podo-input {
  align-items: center;
  background: var(--podo-input-root-background, var(--podo-component-input-background, #FFFFFF));
  border: 1px solid
    var(--podo-input-root-borderColor, var(--podo-component-input-border, #E4E4E7));
  border-radius: 10px;
  display: flex;
  font-size: 16px;
  gap: 6px;
  line-height: 1.6;
  min-height: 42px;
  padding: 0 10px 0 16px;
}

.podo-input[data-size="lg"] {
  border-radius: 12px;
  min-height: 52px;
}

.podo-input:hover:not([data-state]):not(:focus-within) {
  border-color: var(--podo-semantic-color-text-muted, #9FA2AD);
}

/* Figma focused = 2px primary border; inset shadow adds the second pixel
   without shifting layout. */
.podo-input:focus-within:not([data-state="disabled"]) {
  border-color: #426CED;
  box-shadow: inset 0 0 0 1px #426CED;
}

.podo-input[data-state="invalid"] {
  border-color: var(--podo-semantic-color-text-danger, #F23B3B);
}

.podo-input[data-state="disabled"] {
  background: #E4E4E7;
  border-color: #D1D2D6;
}

.podo-input__control {
  background: transparent;
  border: 0;
  color: var(--podo-input-text-color, var(--podo-semantic-color-text-default, #18181B));
  flex: 1 1 0;
  font: inherit;
  min-width: 0;
  outline: none;
  padding: 0;
}

.podo-input__control::placeholder {
  color: var(--podo-semantic-color-text-muted, #9FA2AD);
}

.podo-input[data-state="disabled"] .podo-input__control {
  color: #9FA2AD;
  cursor: not-allowed;
}

.podo-input__prefix,
.podo-input__suffix-icon {
  align-items: center;
  color: var(--podo-semantic-color-text-muted, #9FA2AD);
  display: inline-flex;
  height: 24px;
  justify-content: center;
  width: 24px;
}

/* Icons sharpen from muted to gray.50 while the value is being edited
   (Figma icon/subtil #767985). */
.podo-input:focus-within .podo-input__prefix,
.podo-input:focus-within .podo-input__suffix-icon {
  color: #767985;
}

.podo-input__suffix-text {
  color: var(--podo-input-suffix-text-color, var(--podo-semantic-color-text-subtle, #50555E));
}

/* Field (Figma 538:6691): heading(label + requirement + sub-label + suffix-icon),
   free control slot, footer(helper-text/error + character count). */
.podo-field {
  display: flex;
  flex-direction: column;
  gap: var(--podo-spacing-component-field-gap, 6px);
}

.podo-field__heading {
  align-items: center;
  display: flex;
  gap: 2px;
}

.podo-field__label {
  align-items: baseline;
  color: var(--podo-field-label-color, var(--podo-semantic-color-text-subtle, #50555E));
  display: inline-flex;
  flex: 1 1 0;
  font-size: 14px;
  font-weight: 600;
  gap: 2px;
  line-height: 1.6;
}

.podo-field__requirement {
  color: var(--podo-field-requirement-color, var(--podo-semantic-color-text-danger, #F23B3B));
  font-size: 13px;
  font-weight: 600;
}

.podo-field__sub-label {
  color: var(--podo-field-sub-label-color, var(--podo-semantic-color-text-muted, #9FA2AD));
  font-size: 13px;
  font-weight: 400;
}

.podo-field__suffix-icon {
  align-items: center;
  color: var(--podo-semantic-color-text-subtle, #50555E);
  display: inline-flex;
  height: 20px;
  justify-content: center;
  width: 20px;
}

.podo-field__footer {
  align-items: center;
  display: flex;
  font-size: 14px;
  gap: 2px;
  line-height: 1.6;
}

.podo-field__helper-text {
  color: var(--podo-field-helper-text-color, var(--podo-semantic-color-text-muted, #9FA2AD));
  flex: 1 1 0;
}

.podo-field__error {
  color: var(--podo-field-error-color, var(--podo-semantic-color-text-danger, #F23B3B));
  flex: 1 1 0;
}

.podo-field__count {
  color: var(--podo-field-count-color, var(--podo-semantic-color-text-muted, #9FA2AD));
  margin-left: auto;
}

.podo-icon {
  color: var(--podo-icon-glyph-color, var(--podo-semantic-color-text-default, currentColor));
  font-family: "PodoIcons";
  line-height: 1;
}

.podo-text {
  color: var(--podo-typography-root-color, var(--podo-semantic-color-text-default, #14151A));
  font-family: var(--podo-typography-body-medium-fontFamily, inherit);
  font-size: var(--podo-typography-body-medium-fontSize, 1rem);
  line-height: var(--podo-typography-body-medium-lineHeight, 1.5);
}

.podo-text[data-as="h1"] {
  font-family: var(--podo-typography-heading-xlarge-fontFamily, inherit);
  font-size: var(--podo-typography-heading-xlarge-fontSize, 2rem);
  font-weight: var(--podo-typography-heading-xlarge-fontWeight, 700);
  line-height: var(--podo-typography-heading-xlarge-lineHeight, 1.2);
}</style>
<button class="podo-chip" part="root" data-theme="outline-weak" data-size="sm">
  <span class="podo-chip__prefix" part="prefix"><slot name="prefix"></slot></span>
  <span part="label"><slot></slot></span>
  <span class="podo-chip__suffix" part="suffix"><slot name="suffix"></slot></span>
</button>"
`;

exports[`@podo/web > renders input, field, icon, and typography components > field 1`] = `
"<style>:host {
  box-sizing: border-box;
  font: inherit;
}

:host([fill]) {
  display: block;
  width: 100%;
}

button,
input {
  box-sizing: border-box;
  font: inherit;
}

.podo-button {
  align-items: center;
  justify-content: center;
  background: var(--podo-button-root-background, #426CED);
  border: 1px solid var(--podo-button-root-borderColor, transparent);
  border-radius: 10px;
  color: var(--podo-button-label-color, #FFFFFF);
  cursor: pointer;
  display: inline-flex;
  font-family: var(--podo-typography-body-medium-fontFamily, "Pretendard", sans-serif);
  font-weight: 400;
  gap: 6px;
  line-height: 1.6;
  min-height: 42px;
  min-width: 80px;
  padding: 2px 16px;
}

.podo-button__icon {
  align-items: center;
  color: var(--podo-button-icon-color, var(--podo-button-label-color, currentColor));
  display: inline-flex;
}

/* fill stretches the button to the parent's full width (auto-layout fill). */
.podo-button[data-fill="true"] {
  width: 100%;
}

/* Sizes (Figma: xs 32 / sm 36 / md 42 / lg 52) */
.podo-button[data-size="xs"] {
  border-radius: 6px;
  font-size: 14px;
  min-height: 32px;
  padding: 2px 10px;
}
.podo-button[data-size="sm"] {
  border-radius: 8px;
  font-size: 14px;
  min-height: 36px;
  padding: 2px 16px;
}
.podo-button[data-size="md"] {
  border-radius: 10px;
  font-size: 16px;
  min-height: 42px;
  padding: 2px 16px;
}
.podo-button[data-size="lg"] {
  border-radius: 12px;
  font-size: 16px;
  min-height: 52px;
  padding: 2px 20px;
}

/* Themes (Figma solid/outline x primary/assistive/white) */
.podo-button[data-theme="solid-primary"] {
  --podo-button-root-background: #426CED;
  --podo-button-label-color: #FFFFFF;
}
.podo-button[data-theme="solid-primary"]:hover:not([disabled]) {
  --podo-button-root-background: #1245E2;
}
.podo-button[data-theme="solid-primary"]:active:not([disabled]) {
  --podo-button-root-background: #123BBA;
}
.podo-button[data-theme="solid-assistive"] {
  --podo-button-root-background: #F4F4F5;
  --podo-button-label-color: #18181B;
}
.podo-button[data-theme="solid-assistive"]:hover:not([disabled]) {
  --podo-button-root-background: #E4E4E7;
}
.podo-button[data-theme="solid-white"] {
  --podo-button-root-background: #FFFFFF;
  --podo-button-label-color: #18181B;
}
.podo-button[data-theme="solid-white"]:hover:not([disabled]) {
  --podo-button-root-background: #F4F4F5;
}
.podo-button[data-theme="outline-primary"] {
  --podo-button-root-background: #FFFFFF;
  --podo-button-root-borderColor: #426CED;
  --podo-button-label-color: #426CED;
}
.podo-button[data-theme="outline-primary"]:hover:not([disabled]) {
  --podo-button-root-background: #F4F7FE;
}
.podo-button[data-theme="outline-assistive"] {
  --podo-button-root-background: #F9F9F9;
  --podo-button-root-borderColor: #D1D2D6;
  --podo-button-label-color: #18181B;
}
.podo-button[data-theme="outline-assistive"]:hover:not([disabled]) {
  --podo-button-root-background: #F4F4F5;
}
.podo-button[data-theme="outline-white"] {
  --podo-button-root-background: #FFFFFF;
  --podo-button-root-borderColor: #D1D2D6;
  --podo-button-label-color: #18181B;
}
.podo-button[data-theme="outline-white"]:hover:not([disabled]) {
  --podo-button-root-background: #F9F9F9;
}

.podo-button:focus-visible {
  outline: 2px solid #426CED;
  outline-offset: 2px;
}

.podo-button[disabled] {
  --podo-button-root-background: #E4E4E7;
  --podo-button-root-borderColor: transparent;
  --podo-button-label-color: #9FA2AD;
  cursor: not-allowed;
}

/* Chip (Figma 538:6615): pill tag with prefix/suffix icon slots. */
.podo-chip {
  align-items: center;
  background: var(--podo-chip-root-background, #3E424B);
  border: 1px solid var(--podo-chip-root-borderColor, transparent);
  border-radius: 9999px;
  color: var(--podo-chip-label-color, #FFFFFF);
  cursor: pointer;
  display: inline-flex;
  font-family: var(--podo-typography-body-medium-fontFamily, "Pretendard", sans-serif);
  font-size: 16px;
  font-weight: 400;
  gap: 4px;
  justify-content: center;
  line-height: 1.6;
  min-width: 55px;
  padding: 2px 8px;
}

.podo-chip[data-size="sm"] {
  font-size: 13px;
}

/* Figma outline-strong currently renders identically to solid (filled
   gray.70); mirrored as-is pending a design fix. */
.podo-chip[data-theme="outline-strong"] {
  --podo-chip-root-background: #3E424B;
  --podo-chip-label-color: #FFFFFF;
}

.podo-chip[data-theme="outline-weak"] {
  --podo-chip-root-background: #F9F9F9;
  --podo-chip-root-borderColor: #767985;
  --podo-chip-label-color: #18181B;
}

.podo-chip[data-theme="solid"]:active:not([disabled]),
.podo-chip[data-theme="outline-strong"]:active:not([disabled]) {
  --podo-chip-root-background: #767985;
}

.podo-chip:focus-visible {
  outline: 2px solid #426CED;
  outline-offset: 2px;
}

.podo-chip[disabled] {
  --podo-chip-root-background: #E4E4E7;
  --podo-chip-root-borderColor: transparent;
  --podo-chip-label-color: #9FA2AD;
  cursor: not-allowed;
}

.podo-chip__prefix,
.podo-chip__suffix {
  align-items: center;
  color: var(--podo-chip-label-color, currentColor);
  display: inline-flex;
  justify-content: center;
}

.podo-chip__prefix {
  height: 24px;
  width: 24px;
}

.podo-chip__suffix {
  height: 20px;
  width: 20px;
}

.podo-chip[data-size="sm"] .podo-chip__prefix,
.podo-chip[data-size="sm"] .podo-chip__suffix {
  height: 16px;
  width: 16px;
}

/* Switch (Figma 338:2464): pill track with a shadowed sliding handle.
   sm 30x18/handle 14, md 40x24/handle 20 (base), lg 56x32/handle 25. */
.podo-switch {
  background: var(--podo-switch-root-background, #D1D2D6);
  border: 0;
  border-radius: 9999px;
  cursor: pointer;
  display: inline-block;
  padding: 0;
  position: relative;
  transition: background 0.15s ease;
}

.podo-switch__handle {
  background: var(--podo-switch-handle-background, #FFFFFF);
  border-radius: 9999px;
  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.08);
  left: 2px;
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
  transition: left 0.15s ease;
}

.podo-switch[data-size="sm"] {
  height: 18px;
  width: 30px;
}
.podo-switch[data-size="sm"] .podo-switch__handle {
  height: 14px;
  width: 14px;
}
.podo-switch[data-size="sm"][data-state="on"] .podo-switch__handle {
  left: 14px;
}

.podo-switch[data-size="md"] {
  height: 24px;
  width: 40px;
}
.podo-switch[data-size="md"] .podo-switch__handle {
  height: 20px;
  width: 20px;
}
.podo-switch[data-size="md"][data-state="on"] .podo-switch__handle {
  left: 18px;
}

.podo-switch[data-size="lg"] {
  height: 32px;
  width: 56px;
}
.podo-switch[data-size="lg"] .podo-switch__handle {
  height: 25px;
  left: 4px;
  width: 25px;
}
.podo-switch[data-size="lg"][data-state="on"] .podo-switch__handle {
  left: 27px;
}

.podo-switch[data-state="on"] {
  --podo-switch-root-background: #426CED;
}

.podo-switch:focus-visible {
  outline: 2px solid #426CED;
  outline-offset: 2px;
}

.podo-switch[disabled] {
  --podo-switch-root-background: #E4E4E7;
  --podo-switch-handle-background: #D1D2D6;
  cursor: not-allowed;
}

.podo-switch[disabled] .podo-switch__handle {
  box-shadow: none;
}

/* Input (Figma 538:6693): wrapper carries the box + states, the inner control
   is borderless so prefix/suffix content can live inside the input. */
.podo-input {
  align-items: center;
  background: var(--podo-input-root-background, var(--podo-component-input-background, #FFFFFF));
  border: 1px solid
    var(--podo-input-root-borderColor, var(--podo-component-input-border, #E4E4E7));
  border-radius: 10px;
  display: flex;
  font-size: 16px;
  gap: 6px;
  line-height: 1.6;
  min-height: 42px;
  padding: 0 10px 0 16px;
}

.podo-input[data-size="lg"] {
  border-radius: 12px;
  min-height: 52px;
}

.podo-input:hover:not([data-state]):not(:focus-within) {
  border-color: var(--podo-semantic-color-text-muted, #9FA2AD);
}

/* Figma focused = 2px primary border; inset shadow adds the second pixel
   without shifting layout. */
.podo-input:focus-within:not([data-state="disabled"]) {
  border-color: #426CED;
  box-shadow: inset 0 0 0 1px #426CED;
}

.podo-input[data-state="invalid"] {
  border-color: var(--podo-semantic-color-text-danger, #F23B3B);
}

.podo-input[data-state="disabled"] {
  background: #E4E4E7;
  border-color: #D1D2D6;
}

.podo-input__control {
  background: transparent;
  border: 0;
  color: var(--podo-input-text-color, var(--podo-semantic-color-text-default, #18181B));
  flex: 1 1 0;
  font: inherit;
  min-width: 0;
  outline: none;
  padding: 0;
}

.podo-input__control::placeholder {
  color: var(--podo-semantic-color-text-muted, #9FA2AD);
}

.podo-input[data-state="disabled"] .podo-input__control {
  color: #9FA2AD;
  cursor: not-allowed;
}

.podo-input__prefix,
.podo-input__suffix-icon {
  align-items: center;
  color: var(--podo-semantic-color-text-muted, #9FA2AD);
  display: inline-flex;
  height: 24px;
  justify-content: center;
  width: 24px;
}

/* Icons sharpen from muted to gray.50 while the value is being edited
   (Figma icon/subtil #767985). */
.podo-input:focus-within .podo-input__prefix,
.podo-input:focus-within .podo-input__suffix-icon {
  color: #767985;
}

.podo-input__suffix-text {
  color: var(--podo-input-suffix-text-color, var(--podo-semantic-color-text-subtle, #50555E));
}

/* Field (Figma 538:6691): heading(label + requirement + sub-label + suffix-icon),
   free control slot, footer(helper-text/error + character count). */
.podo-field {
  display: flex;
  flex-direction: column;
  gap: var(--podo-spacing-component-field-gap, 6px);
}

.podo-field__heading {
  align-items: center;
  display: flex;
  gap: 2px;
}

.podo-field__label {
  align-items: baseline;
  color: var(--podo-field-label-color, var(--podo-semantic-color-text-subtle, #50555E));
  display: inline-flex;
  flex: 1 1 0;
  font-size: 14px;
  font-weight: 600;
  gap: 2px;
  line-height: 1.6;
}

.podo-field__requirement {
  color: var(--podo-field-requirement-color, var(--podo-semantic-color-text-danger, #F23B3B));
  font-size: 13px;
  font-weight: 600;
}

.podo-field__sub-label {
  color: var(--podo-field-sub-label-color, var(--podo-semantic-color-text-muted, #9FA2AD));
  font-size: 13px;
  font-weight: 400;
}

.podo-field__suffix-icon {
  align-items: center;
  color: var(--podo-semantic-color-text-subtle, #50555E);
  display: inline-flex;
  height: 20px;
  justify-content: center;
  width: 20px;
}

.podo-field__footer {
  align-items: center;
  display: flex;
  font-size: 14px;
  gap: 2px;
  line-height: 1.6;
}

.podo-field__helper-text {
  color: var(--podo-field-helper-text-color, var(--podo-semantic-color-text-muted, #9FA2AD));
  flex: 1 1 0;
}

.podo-field__error {
  color: var(--podo-field-error-color, var(--podo-semantic-color-text-danger, #F23B3B));
  flex: 1 1 0;
}

.podo-field__count {
  color: var(--podo-field-count-color, var(--podo-semantic-color-text-muted, #9FA2AD));
  margin-left: auto;
}

.podo-icon {
  color: var(--podo-icon-glyph-color, var(--podo-semantic-color-text-default, currentColor));
  font-family: "PodoIcons";
  line-height: 1;
}

.podo-text {
  color: var(--podo-typography-root-color, var(--podo-semantic-color-text-default, #14151A));
  font-family: var(--podo-typography-body-medium-fontFamily, inherit);
  font-size: var(--podo-typography-body-medium-fontSize, 1rem);
  line-height: var(--podo-typography-body-medium-lineHeight, 1.5);
}

.podo-text[data-as="h1"] {
  font-family: var(--podo-typography-heading-xlarge-fontFamily, inherit);
  font-size: var(--podo-typography-heading-xlarge-fontSize, 2rem);
  font-weight: var(--podo-typography-heading-xlarge-fontWeight, 700);
  line-height: var(--podo-typography-heading-xlarge-lineHeight, 1.2);
}</style>
<div class="podo-field" part="root" id="email" data-state="invalid">
  <div class="podo-field__heading" part="heading">
    <label class="podo-field__label" part="label" id="email-label" for="email-control">
      <slot name="label">Label</slot><span class="podo-field__requirement" aria-hidden="true">*</span>
    </label>
  </div>
  <div part="control"><slot></slot></div>
  <div class="podo-field__footer" part="footer">
    <span class="podo-field__helper-text" part="helper-text" id="email-description"><slot name="helper-text"></slot></span>
    <span class="podo-field__error" part="error" id="email-error">
      <slot name="error"></slot>
    </span>
  </div>
</div>"
`;

exports[`@podo/web > renders input, field, icon, and typography components > icon 1`] = `
"<style>:host {
  box-sizing: border-box;
  font: inherit;
}

:host([fill]) {
  display: block;
  width: 100%;
}

button,
input {
  box-sizing: border-box;
  font: inherit;
}

.podo-button {
  align-items: center;
  justify-content: center;
  background: var(--podo-button-root-background, #426CED);
  border: 1px solid var(--podo-button-root-borderColor, transparent);
  border-radius: 10px;
  color: var(--podo-button-label-color, #FFFFFF);
  cursor: pointer;
  display: inline-flex;
  font-family: var(--podo-typography-body-medium-fontFamily, "Pretendard", sans-serif);
  font-weight: 400;
  gap: 6px;
  line-height: 1.6;
  min-height: 42px;
  min-width: 80px;
  padding: 2px 16px;
}

.podo-button__icon {
  align-items: center;
  color: var(--podo-button-icon-color, var(--podo-button-label-color, currentColor));
  display: inline-flex;
}

/* fill stretches the button to the parent's full width (auto-layout fill). */
.podo-button[data-fill="true"] {
  width: 100%;
}

/* Sizes (Figma: xs 32 / sm 36 / md 42 / lg 52) */
.podo-button[data-size="xs"] {
  border-radius: 6px;
  font-size: 14px;
  min-height: 32px;
  padding: 2px 10px;
}
.podo-button[data-size="sm"] {
  border-radius: 8px;
  font-size: 14px;
  min-height: 36px;
  padding: 2px 16px;
}
.podo-button[data-size="md"] {
  border-radius: 10px;
  font-size: 16px;
  min-height: 42px;
  padding: 2px 16px;
}
.podo-button[data-size="lg"] {
  border-radius: 12px;
  font-size: 16px;
  min-height: 52px;
  padding: 2px 20px;
}

/* Themes (Figma solid/outline x primary/assistive/white) */
.podo-button[data-theme="solid-primary"] {
  --podo-button-root-background: #426CED;
  --podo-button-label-color: #FFFFFF;
}
.podo-button[data-theme="solid-primary"]:hover:not([disabled]) {
  --podo-button-root-background: #1245E2;
}
.podo-button[data-theme="solid-primary"]:active:not([disabled]) {
  --podo-button-root-background: #123BBA;
}
.podo-button[data-theme="solid-assistive"] {
  --podo-button-root-background: #F4F4F5;
  --podo-button-label-color: #18181B;
}
.podo-button[data-theme="solid-assistive"]:hover:not([disabled]) {
  --podo-button-root-background: #E4E4E7;
}
.podo-button[data-theme="solid-white"] {
  --podo-button-root-background: #FFFFFF;
  --podo-button-label-color: #18181B;
}
.podo-button[data-theme="solid-white"]:hover:not([disabled]) {
  --podo-button-root-background: #F4F4F5;
}
.podo-button[data-theme="outline-primary"] {
  --podo-button-root-background: #FFFFFF;
  --podo-button-root-borderColor: #426CED;
  --podo-button-label-color: #426CED;
}
.podo-button[data-theme="outline-primary"]:hover:not([disabled]) {
  --podo-button-root-background: #F4F7FE;
}
.podo-button[data-theme="outline-assistive"] {
  --podo-button-root-background: #F9F9F9;
  --podo-button-root-borderColor: #D1D2D6;
  --podo-button-label-color: #18181B;
}
.podo-button[data-theme="outline-assistive"]:hover:not([disabled]) {
  --podo-button-root-background: #F4F4F5;
}
.podo-button[data-theme="outline-white"] {
  --podo-button-root-background: #FFFFFF;
  --podo-button-root-borderColor: #D1D2D6;
  --podo-button-label-color: #18181B;
}
.podo-button[data-theme="outline-white"]:hover:not([disabled]) {
  --podo-button-root-background: #F9F9F9;
}

.podo-button:focus-visible {
  outline: 2px solid #426CED;
  outline-offset: 2px;
}

.podo-button[disabled] {
  --podo-button-root-background: #E4E4E7;
  --podo-button-root-borderColor: transparent;
  --podo-button-label-color: #9FA2AD;
  cursor: not-allowed;
}

/* Chip (Figma 538:6615): pill tag with prefix/suffix icon slots. */
.podo-chip {
  align-items: center;
  background: var(--podo-chip-root-background, #3E424B);
  border: 1px solid var(--podo-chip-root-borderColor, transparent);
  border-radius: 9999px;
  color: var(--podo-chip-label-color, #FFFFFF);
  cursor: pointer;
  display: inline-flex;
  font-family: var(--podo-typography-body-medium-fontFamily, "Pretendard", sans-serif);
  font-size: 16px;
  font-weight: 400;
  gap: 4px;
  justify-content: center;
  line-height: 1.6;
  min-width: 55px;
  padding: 2px 8px;
}

.podo-chip[data-size="sm"] {
  font-size: 13px;
}

/* Figma outline-strong currently renders identically to solid (filled
   gray.70); mirrored as-is pending a design fix. */
.podo-chip[data-theme="outline-strong"] {
  --podo-chip-root-background: #3E424B;
  --podo-chip-label-color: #FFFFFF;
}

.podo-chip[data-theme="outline-weak"] {
  --podo-chip-root-background: #F9F9F9;
  --podo-chip-root-borderColor: #767985;
  --podo-chip-label-color: #18181B;
}

.podo-chip[data-theme="solid"]:active:not([disabled]),
.podo-chip[data-theme="outline-strong"]:active:not([disabled]) {
  --podo-chip-root-background: #767985;
}

.podo-chip:focus-visible {
  outline: 2px solid #426CED;
  outline-offset: 2px;
}

.podo-chip[disabled] {
  --podo-chip-root-background: #E4E4E7;
  --podo-chip-root-borderColor: transparent;
  --podo-chip-label-color: #9FA2AD;
  cursor: not-allowed;
}

.podo-chip__prefix,
.podo-chip__suffix {
  align-items: center;
  color: var(--podo-chip-label-color, currentColor);
  display: inline-flex;
  justify-content: center;
}

.podo-chip__prefix {
  height: 24px;
  width: 24px;
}

.podo-chip__suffix {
  height: 20px;
  width: 20px;
}

.podo-chip[data-size="sm"] .podo-chip__prefix,
.podo-chip[data-size="sm"] .podo-chip__suffix {
  height: 16px;
  width: 16px;
}

/* Switch (Figma 338:2464): pill track with a shadowed sliding handle.
   sm 30x18/handle 14, md 40x24/handle 20 (base), lg 56x32/handle 25. */
.podo-switch {
  background: var(--podo-switch-root-background, #D1D2D6);
  border: 0;
  border-radius: 9999px;
  cursor: pointer;
  display: inline-block;
  padding: 0;
  position: relative;
  transition: background 0.15s ease;
}

.podo-switch__handle {
  background: var(--podo-switch-handle-background, #FFFFFF);
  border-radius: 9999px;
  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.08);
  left: 2px;
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
  transition: left 0.15s ease;
}

.podo-switch[data-size="sm"] {
  height: 18px;
  width: 30px;
}
.podo-switch[data-size="sm"] .podo-switch__handle {
  height: 14px;
  width: 14px;
}
.podo-switch[data-size="sm"][data-state="on"] .podo-switch__handle {
  left: 14px;
}

.podo-switch[data-size="md"] {
  height: 24px;
  width: 40px;
}
.podo-switch[data-size="md"] .podo-switch__handle {
  height: 20px;
  width: 20px;
}
.podo-switch[data-size="md"][data-state="on"] .podo-switch__handle {
  left: 18px;
}

.podo-switch[data-size="lg"] {
  height: 32px;
  width: 56px;
}
.podo-switch[data-size="lg"] .podo-switch__handle {
  height: 25px;
  left: 4px;
  width: 25px;
}
.podo-switch[data-size="lg"][data-state="on"] .podo-switch__handle {
  left: 27px;
}

.podo-switch[data-state="on"] {
  --podo-switch-root-background: #426CED;
}

.podo-switch:focus-visible {
  outline: 2px solid #426CED;
  outline-offset: 2px;
}

.podo-switch[disabled] {
  --podo-switch-root-background: #E4E4E7;
  --podo-switch-handle-background: #D1D2D6;
  cursor: not-allowed;
}

.podo-switch[disabled] .podo-switch__handle {
  box-shadow: none;
}

/* Input (Figma 538:6693): wrapper carries the box + states, the inner control
   is borderless so prefix/suffix content can live inside the input. */
.podo-input {
  align-items: center;
  background: var(--podo-input-root-background, var(--podo-component-input-background, #FFFFFF));
  border: 1px solid
    var(--podo-input-root-borderColor, var(--podo-component-input-border, #E4E4E7));
  border-radius: 10px;
  display: flex;
  font-size: 16px;
  gap: 6px;
  line-height: 1.6;
  min-height: 42px;
  padding: 0 10px 0 16px;
}

.podo-input[data-size="lg"] {
  border-radius: 12px;
  min-height: 52px;
}

.podo-input:hover:not([data-state]):not(:focus-within) {
  border-color: var(--podo-semantic-color-text-muted, #9FA2AD);
}

/* Figma focused = 2px primary border; inset shadow adds the second pixel
   without shifting layout. */
.podo-input:focus-within:not([data-state="disabled"]) {
  border-color: #426CED;
  box-shadow: inset 0 0 0 1px #426CED;
}

.podo-input[data-state="invalid"] {
  border-color: var(--podo-semantic-color-text-danger, #F23B3B);
}

.podo-input[data-state="disabled"] {
  background: #E4E4E7;
  border-color: #D1D2D6;
}

.podo-input__control {
  background: transparent;
  border: 0;
  color: var(--podo-input-text-color, var(--podo-semantic-color-text-default, #18181B));
  flex: 1 1 0;
  font: inherit;
  min-width: 0;
  outline: none;
  padding: 0;
}

.podo-input__control::placeholder {
  color: var(--podo-semantic-color-text-muted, #9FA2AD);
}

.podo-input[data-state="disabled"] .podo-input__control {
  color: #9FA2AD;
  cursor: not-allowed;
}

.podo-input__prefix,
.podo-input__suffix-icon {
  align-items: center;
  color: var(--podo-semantic-color-text-muted, #9FA2AD);
  display: inline-flex;
  height: 24px;
  justify-content: center;
  width: 24px;
}

/* Icons sharpen from muted to gray.50 while the value is being edited
   (Figma icon/subtil #767985). */
.podo-input:focus-within .podo-input__prefix,
.podo-input:focus-within .podo-input__suffix-icon {
  color: #767985;
}

.podo-input__suffix-text {
  color: var(--podo-input-suffix-text-color, var(--podo-semantic-color-text-subtle, #50555E));
}

/* Field (Figma 538:6691): heading(label + requirement + sub-label + suffix-icon),
   free control slot, footer(helper-text/error + character count). */
.podo-field {
  display: flex;
  flex-direction: column;
  gap: var(--podo-spacing-component-field-gap, 6px);
}

.podo-field__heading {
  align-items: center;
  display: flex;
  gap: 2px;
}

.podo-field__label {
  align-items: baseline;
  color: var(--podo-field-label-color, var(--podo-semantic-color-text-subtle, #50555E));
  display: inline-flex;
  flex: 1 1 0;
  font-size: 14px;
  font-weight: 600;
  gap: 2px;
  line-height: 1.6;
}

.podo-field__requirement {
  color: var(--podo-field-requirement-color, var(--podo-semantic-color-text-danger, #F23B3B));
  font-size: 13px;
  font-weight: 600;
}

.podo-field__sub-label {
  color: var(--podo-field-sub-label-color, var(--podo-semantic-color-text-muted, #9FA2AD));
  font-size: 13px;
  font-weight: 400;
}

.podo-field__suffix-icon {
  align-items: center;
  color: var(--podo-semantic-color-text-subtle, #50555E);
  display: inline-flex;
  height: 20px;
  justify-content: center;
  width: 20px;
}

.podo-field__footer {
  align-items: center;
  display: flex;
  font-size: 14px;
  gap: 2px;
  line-height: 1.6;
}

.podo-field__helper-text {
  color: var(--podo-field-helper-text-color, var(--podo-semantic-color-text-muted, #9FA2AD));
  flex: 1 1 0;
}

.podo-field__error {
  color: var(--podo-field-error-color, var(--podo-semantic-color-text-danger, #F23B3B));
  flex: 1 1 0;
}

.podo-field__count {
  color: var(--podo-field-count-color, var(--podo-semantic-color-text-muted, #9FA2AD));
  margin-left: auto;
}

.podo-icon {
  color: var(--podo-icon-glyph-color, var(--podo-semantic-color-text-default, currentColor));
  font-family: "PodoIcons";
  line-height: 1;
}

.podo-text {
  color: var(--podo-typography-root-color, var(--podo-semantic-color-text-default, #14151A));
  font-family: var(--podo-typography-body-medium-fontFamily, inherit);
  font-size: var(--podo-typography-body-medium-fontSize, 1rem);
  line-height: var(--podo-typography-body-medium-lineHeight, 1.5);
}

.podo-text[data-as="h1"] {
  font-family: var(--podo-typography-heading-xlarge-fontFamily, inherit);
  font-size: var(--podo-typography-heading-xlarge-fontSize, 2rem);
  font-weight: var(--podo-typography-heading-xlarge-fontWeight, 700);
  line-height: var(--podo-typography-heading-xlarge-lineHeight, 1.2);
}</style><span class="podo-icon podo-icon-menu" part="icon" aria-hidden="true"></span>"
`;

exports[`@podo/web > renders input, field, icon, and typography components > input 1`] = `
"<style>:host {
  box-sizing: border-box;
  font: inherit;
}

:host([fill]) {
  display: block;
  width: 100%;
}

button,
input {
  box-sizing: border-box;
  font: inherit;
}

.podo-button {
  align-items: center;
  justify-content: center;
  background: var(--podo-button-root-background, #426CED);
  border: 1px solid var(--podo-button-root-borderColor, transparent);
  border-radius: 10px;
  color: var(--podo-button-label-color, #FFFFFF);
  cursor: pointer;
  display: inline-flex;
  font-family: var(--podo-typography-body-medium-fontFamily, "Pretendard", sans-serif);
  font-weight: 400;
  gap: 6px;
  line-height: 1.6;
  min-height: 42px;
  min-width: 80px;
  padding: 2px 16px;
}

.podo-button__icon {
  align-items: center;
  color: var(--podo-button-icon-color, var(--podo-button-label-color, currentColor));
  display: inline-flex;
}

/* fill stretches the button to the parent's full width (auto-layout fill). */
.podo-button[data-fill="true"] {
  width: 100%;
}

/* Sizes (Figma: xs 32 / sm 36 / md 42 / lg 52) */
.podo-button[data-size="xs"] {
  border-radius: 6px;
  font-size: 14px;
  min-height: 32px;
  padding: 2px 10px;
}
.podo-button[data-size="sm"] {
  border-radius: 8px;
  font-size: 14px;
  min-height: 36px;
  padding: 2px 16px;
}
.podo-button[data-size="md"] {
  border-radius: 10px;
  font-size: 16px;
  min-height: 42px;
  padding: 2px 16px;
}
.podo-button[data-size="lg"] {
  border-radius: 12px;
  font-size: 16px;
  min-height: 52px;
  padding: 2px 20px;
}

/* Themes (Figma solid/outline x primary/assistive/white) */
.podo-button[data-theme="solid-primary"] {
  --podo-button-root-background: #426CED;
  --podo-button-label-color: #FFFFFF;
}
.podo-button[data-theme="solid-primary"]:hover:not([disabled]) {
  --podo-button-root-background: #1245E2;
}
.podo-button[data-theme="solid-primary"]:active:not([disabled]) {
  --podo-button-root-background: #123BBA;
}
.podo-button[data-theme="solid-assistive"] {
  --podo-button-root-background: #F4F4F5;
  --podo-button-label-color: #18181B;
}
.podo-button[data-theme="solid-assistive"]:hover:not([disabled]) {
  --podo-button-root-background: #E4E4E7;
}
.podo-button[data-theme="solid-white"] {
  --podo-button-root-background: #FFFFFF;
  --podo-button-label-color: #18181B;
}
.podo-button[data-theme="solid-white"]:hover:not([disabled]) {
  --podo-button-root-background: #F4F4F5;
}
.podo-button[data-theme="outline-primary"] {
  --podo-button-root-background: #FFFFFF;
  --podo-button-root-borderColor: #426CED;
  --podo-button-label-color: #426CED;
}
.podo-button[data-theme="outline-primary"]:hover:not([disabled]) {
  --podo-button-root-background: #F4F7FE;
}
.podo-button[data-theme="outline-assistive"] {
  --podo-button-root-background: #F9F9F9;
  --podo-button-root-borderColor: #D1D2D6;
  --podo-button-label-color: #18181B;
}
.podo-button[data-theme="outline-assistive"]:hover:not([disabled]) {
  --podo-button-root-background: #F4F4F5;
}
.podo-button[data-theme="outline-white"] {
  --podo-button-root-background: #FFFFFF;
  --podo-button-root-borderColor: #D1D2D6;
  --podo-button-label-color: #18181B;
}
.podo-button[data-theme="outline-white"]:hover:not([disabled]) {
  --podo-button-root-background: #F9F9F9;
}

.podo-button:focus-visible {
  outline: 2px solid #426CED;
  outline-offset: 2px;
}

.podo-button[disabled] {
  --podo-button-root-background: #E4E4E7;
  --podo-button-root-borderColor: transparent;
  --podo-button-label-color: #9FA2AD;
  cursor: not-allowed;
}

/* Chip (Figma 538:6615): pill tag with prefix/suffix icon slots. */
.podo-chip {
  align-items: center;
  background: var(--podo-chip-root-background, #3E424B);
  border: 1px solid var(--podo-chip-root-borderColor, transparent);
  border-radius: 9999px;
  color: var(--podo-chip-label-color, #FFFFFF);
  cursor: pointer;
  display: inline-flex;
  font-family: var(--podo-typography-body-medium-fontFamily, "Pretendard", sans-serif);
  font-size: 16px;
  font-weight: 400;
  gap: 4px;
  justify-content: center;
  line-height: 1.6;
  min-width: 55px;
  padding: 2px 8px;
}

.podo-chip[data-size="sm"] {
  font-size: 13px;
}

/* Figma outline-strong currently renders identically to solid (filled
   gray.70); mirrored as-is pending a design fix. */
.podo-chip[data-theme="outline-strong"] {
  --podo-chip-root-background: #3E424B;
  --podo-chip-label-color: #FFFFFF;
}

.podo-chip[data-theme="outline-weak"] {
  --podo-chip-root-background: #F9F9F9;
  --podo-chip-root-borderColor: #767985;
  --podo-chip-label-color: #18181B;
}

.podo-chip[data-theme="solid"]:active:not([disabled]),
.podo-chip[data-theme="outline-strong"]:active:not([disabled]) {
  --podo-chip-root-background: #767985;
}

.podo-chip:focus-visible {
  outline: 2px solid #426CED;
  outline-offset: 2px;
}

.podo-chip[disabled] {
  --podo-chip-root-background: #E4E4E7;
  --podo-chip-root-borderColor: transparent;
  --podo-chip-label-color: #9FA2AD;
  cursor: not-allowed;
}

.podo-chip__prefix,
.podo-chip__suffix {
  align-items: center;
  color: var(--podo-chip-label-color, currentColor);
  display: inline-flex;
  justify-content: center;
}

.podo-chip__prefix {
  height: 24px;
  width: 24px;
}

.podo-chip__suffix {
  height: 20px;
  width: 20px;
}

.podo-chip[data-size="sm"] .podo-chip__prefix,
.podo-chip[data-size="sm"] .podo-chip__suffix {
  height: 16px;
  width: 16px;
}

/* Switch (Figma 338:2464): pill track with a shadowed sliding handle.
   sm 30x18/handle 14, md 40x24/handle 20 (base), lg 56x32/handle 25. */
.podo-switch {
  background: var(--podo-switch-root-background, #D1D2D6);
  border: 0;
  border-radius: 9999px;
  cursor: pointer;
  display: inline-block;
  padding: 0;
  position: relative;
  transition: background 0.15s ease;
}

.podo-switch__handle {
  background: var(--podo-switch-handle-background, #FFFFFF);
  border-radius: 9999px;
  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.08);
  left: 2px;
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
  transition: left 0.15s ease;
}

.podo-switch[data-size="sm"] {
  height: 18px;
  width: 30px;
}
.podo-switch[data-size="sm"] .podo-switch__handle {
  height: 14px;
  width: 14px;
}
.podo-switch[data-size="sm"][data-state="on"] .podo-switch__handle {
  left: 14px;
}

.podo-switch[data-size="md"] {
  height: 24px;
  width: 40px;
}
.podo-switch[data-size="md"] .podo-switch__handle {
  height: 20px;
  width: 20px;
}
.podo-switch[data-size="md"][data-state="on"] .podo-switch__handle {
  left: 18px;
}

.podo-switch[data-size="lg"] {
  height: 32px;
  width: 56px;
}
.podo-switch[data-size="lg"] .podo-switch__handle {
  height: 25px;
  left: 4px;
  width: 25px;
}
.podo-switch[data-size="lg"][data-state="on"] .podo-switch__handle {
  left: 27px;
}

.podo-switch[data-state="on"] {
  --podo-switch-root-background: #426CED;
}

.podo-switch:focus-visible {
  outline: 2px solid #426CED;
  outline-offset: 2px;
}

.podo-switch[disabled] {
  --podo-switch-root-background: #E4E4E7;
  --podo-switch-handle-background: #D1D2D6;
  cursor: not-allowed;
}

.podo-switch[disabled] .podo-switch__handle {
  box-shadow: none;
}

/* Input (Figma 538:6693): wrapper carries the box + states, the inner control
   is borderless so prefix/suffix content can live inside the input. */
.podo-input {
  align-items: center;
  background: var(--podo-input-root-background, var(--podo-component-input-background, #FFFFFF));
  border: 1px solid
    var(--podo-input-root-borderColor, var(--podo-component-input-border, #E4E4E7));
  border-radius: 10px;
  display: flex;
  font-size: 16px;
  gap: 6px;
  line-height: 1.6;
  min-height: 42px;
  padding: 0 10px 0 16px;
}

.podo-input[data-size="lg"] {
  border-radius: 12px;
  min-height: 52px;
}

.podo-input:hover:not([data-state]):not(:focus-within) {
  border-color: var(--podo-semantic-color-text-muted, #9FA2AD);
}

/* Figma focused = 2px primary border; inset shadow adds the second pixel
   without shifting layout. */
.podo-input:focus-within:not([data-state="disabled"]) {
  border-color: #426CED;
  box-shadow: inset 0 0 0 1px #426CED;
}

.podo-input[data-state="invalid"] {
  border-color: var(--podo-semantic-color-text-danger, #F23B3B);
}

.podo-input[data-state="disabled"] {
  background: #E4E4E7;
  border-color: #D1D2D6;
}

.podo-input__control {
  background: transparent;
  border: 0;
  color: var(--podo-input-text-color, var(--podo-semantic-color-text-default, #18181B));
  flex: 1 1 0;
  font: inherit;
  min-width: 0;
  outline: none;
  padding: 0;
}

.podo-input__control::placeholder {
  color: var(--podo-semantic-color-text-muted, #9FA2AD);
}

.podo-input[data-state="disabled"] .podo-input__control {
  color: #9FA2AD;
  cursor: not-allowed;
}

.podo-input__prefix,
.podo-input__suffix-icon {
  align-items: center;
  color: var(--podo-semantic-color-text-muted, #9FA2AD);
  display: inline-flex;
  height: 24px;
  justify-content: center;
  width: 24px;
}

/* Icons sharpen from muted to gray.50 while the value is being edited
   (Figma icon/subtil #767985). */
.podo-input:focus-within .podo-input__prefix,
.podo-input:focus-within .podo-input__suffix-icon {
  color: #767985;
}

.podo-input__suffix-text {
  color: var(--podo-input-suffix-text-color, var(--podo-semantic-color-text-subtle, #50555E));
}

/* Field (Figma 538:6691): heading(label + requirement + sub-label + suffix-icon),
   free control slot, footer(helper-text/error + character count). */
.podo-field {
  display: flex;
  flex-direction: column;
  gap: var(--podo-spacing-component-field-gap, 6px);
}

.podo-field__heading {
  align-items: center;
  display: flex;
  gap: 2px;
}

.podo-field__label {
  align-items: baseline;
  color: var(--podo-field-label-color, var(--podo-semantic-color-text-subtle, #50555E));
  display: inline-flex;
  flex: 1 1 0;
  font-size: 14px;
  font-weight: 600;
  gap: 2px;
  line-height: 1.6;
}

.podo-field__requirement {
  color: var(--podo-field-requirement-color, var(--podo-semantic-color-text-danger, #F23B3B));
  font-size: 13px;
  font-weight: 600;
}

.podo-field__sub-label {
  color: var(--podo-field-sub-label-color, var(--podo-semantic-color-text-muted, #9FA2AD));
  font-size: 13px;
  font-weight: 400;
}

.podo-field__suffix-icon {
  align-items: center;
  color: var(--podo-semantic-color-text-subtle, #50555E);
  display: inline-flex;
  height: 20px;
  justify-content: center;
  width: 20px;
}

.podo-field__footer {
  align-items: center;
  display: flex;
  font-size: 14px;
  gap: 2px;
  line-height: 1.6;
}

.podo-field__helper-text {
  color: var(--podo-field-helper-text-color, var(--podo-semantic-color-text-muted, #9FA2AD));
  flex: 1 1 0;
}

.podo-field__error {
  color: var(--podo-field-error-color, var(--podo-semantic-color-text-danger, #F23B3B));
  flex: 1 1 0;
}

.podo-field__count {
  color: var(--podo-field-count-color, var(--podo-semantic-color-text-muted, #9FA2AD));
  margin-left: auto;
}

.podo-icon {
  color: var(--podo-icon-glyph-color, var(--podo-semantic-color-text-default, currentColor));
  font-family: "PodoIcons";
  line-height: 1;
}

.podo-text {
  color: var(--podo-typography-root-color, var(--podo-semantic-color-text-default, #14151A));
  font-family: var(--podo-typography-body-medium-fontFamily, inherit);
  font-size: var(--podo-typography-body-medium-fontSize, 1rem);
  line-height: var(--podo-typography-body-medium-lineHeight, 1.5);
}

.podo-text[data-as="h1"] {
  font-family: var(--podo-typography-heading-xlarge-fontFamily, inherit);
  font-size: var(--podo-typography-heading-xlarge-fontSize, 2rem);
  font-weight: var(--podo-typography-heading-xlarge-fontWeight, 700);
  line-height: var(--podo-typography-heading-xlarge-lineHeight, 1.2);
}</style>
<div class="podo-input" part="root" data-size="lg" data-state="invalid">
  <span class="podo-input__prefix" part="prefix"><slot name="prefix"></slot></span><input class="podo-input__control" part="control" value="hello" placeholder="" aria-invalid="true"><span class="podo-input__suffix-text" part="suffix-text"><slot name="suffix-text"></slot></span>
</div>"
`;

exports[`@podo/web > renders input, field, icon, and typography components > switch 1`] = `
"<style>:host {
  box-sizing: border-box;
  font: inherit;
}

:host([fill]) {
  display: block;
  width: 100%;
}

button,
input {
  box-sizing: border-box;
  font: inherit;
}

.podo-button {
  align-items: center;
  justify-content: center;
  background: var(--podo-button-root-background, #426CED);
  border: 1px solid var(--podo-button-root-borderColor, transparent);
  border-radius: 10px;
  color: var(--podo-button-label-color, #FFFFFF);
  cursor: pointer;
  display: inline-flex;
  font-family: var(--podo-typography-body-medium-fontFamily, "Pretendard", sans-serif);
  font-weight: 400;
  gap: 6px;
  line-height: 1.6;
  min-height: 42px;
  min-width: 80px;
  padding: 2px 16px;
}

.podo-button__icon {
  align-items: center;
  color: var(--podo-button-icon-color, var(--podo-button-label-color, currentColor));
  display: inline-flex;
}

/* fill stretches the button to the parent's full width (auto-layout fill). */
.podo-button[data-fill="true"] {
  width: 100%;
}

/* Sizes (Figma: xs 32 / sm 36 / md 42 / lg 52) */
.podo-button[data-size="xs"] {
  border-radius: 6px;
  font-size: 14px;
  min-height: 32px;
  padding: 2px 10px;
}
.podo-button[data-size="sm"] {
  border-radius: 8px;
  font-size: 14px;
  min-height: 36px;
  padding: 2px 16px;
}
.podo-button[data-size="md"] {
  border-radius: 10px;
  font-size: 16px;
  min-height: 42px;
  padding: 2px 16px;
}
.podo-button[data-size="lg"] {
  border-radius: 12px;
  font-size: 16px;
  min-height: 52px;
  padding: 2px 20px;
}

/* Themes (Figma solid/outline x primary/assistive/white) */
.podo-button[data-theme="solid-primary"] {
  --podo-button-root-background: #426CED;
  --podo-button-label-color: #FFFFFF;
}
.podo-button[data-theme="solid-primary"]:hover:not([disabled]) {
  --podo-button-root-background: #1245E2;
}
.podo-button[data-theme="solid-primary"]:active:not([disabled]) {
  --podo-button-root-background: #123BBA;
}
.podo-button[data-theme="solid-assistive"] {
  --podo-button-root-background: #F4F4F5;
  --podo-button-label-color: #18181B;
}
.podo-button[data-theme="solid-assistive"]:hover:not([disabled]) {
  --podo-button-root-background: #E4E4E7;
}
.podo-button[data-theme="solid-white"] {
  --podo-button-root-background: #FFFFFF;
  --podo-button-label-color: #18181B;
}
.podo-button[data-theme="solid-white"]:hover:not([disabled]) {
  --podo-button-root-background: #F4F4F5;
}
.podo-button[data-theme="outline-primary"] {
  --podo-button-root-background: #FFFFFF;
  --podo-button-root-borderColor: #426CED;
  --podo-button-label-color: #426CED;
}
.podo-button[data-theme="outline-primary"]:hover:not([disabled]) {
  --podo-button-root-background: #F4F7FE;
}
.podo-button[data-theme="outline-assistive"] {
  --podo-button-root-background: #F9F9F9;
  --podo-button-root-borderColor: #D1D2D6;
  --podo-button-label-color: #18181B;
}
.podo-button[data-theme="outline-assistive"]:hover:not([disabled]) {
  --podo-button-root-background: #F4F4F5;
}
.podo-button[data-theme="outline-white"] {
  --podo-button-root-background: #FFFFFF;
  --podo-button-root-borderColor: #D1D2D6;
  --podo-button-label-color: #18181B;
}
.podo-button[data-theme="outline-white"]:hover:not([disabled]) {
  --podo-button-root-background: #F9F9F9;
}

.podo-button:focus-visible {
  outline: 2px solid #426CED;
  outline-offset: 2px;
}

.podo-button[disabled] {
  --podo-button-root-background: #E4E4E7;
  --podo-button-root-borderColor: transparent;
  --podo-button-label-color: #9FA2AD;
  cursor: not-allowed;
}

/* Chip (Figma 538:6615): pill tag with prefix/suffix icon slots. */
.podo-chip {
  align-items: center;
  background: var(--podo-chip-root-background, #3E424B);
  border: 1px solid var(--podo-chip-root-borderColor, transparent);
  border-radius: 9999px;
  color: var(--podo-chip-label-color, #FFFFFF);
  cursor: pointer;
  display: inline-flex;
  font-family: var(--podo-typography-body-medium-fontFamily, "Pretendard", sans-serif);
  font-size: 16px;
  font-weight: 400;
  gap: 4px;
  justify-content: center;
  line-height: 1.6;
  min-width: 55px;
  padding: 2px 8px;
}

.podo-chip[data-size="sm"] {
  font-size: 13px;
}

/* Figma outline-strong currently renders identically to solid (filled
   gray.70); mirrored as-is pending a design fix. */
.podo-chip[data-theme="outline-strong"] {
  --podo-chip-root-background: #3E424B;
  --podo-chip-label-color: #FFFFFF;
}

.podo-chip[data-theme="outline-weak"] {
  --podo-chip-root-background: #F9F9F9;
  --podo-chip-root-borderColor: #767985;
  --podo-chip-label-color: #18181B;
}

.podo-chip[data-theme="solid"]:active:not([disabled]),
.podo-chip[data-theme="outline-strong"]:active:not([disabled]) {
  --podo-chip-root-background: #767985;
}

.podo-chip:focus-visible {
  outline: 2px solid #426CED;
  outline-offset: 2px;
}

.podo-chip[disabled] {
  --podo-chip-root-background: #E4E4E7;
  --podo-chip-root-borderColor: transparent;
  --podo-chip-label-color: #9FA2AD;
  cursor: not-allowed;
}

.podo-chip__prefix,
.podo-chip__suffix {
  align-items: center;
  color: var(--podo-chip-label-color, currentColor);
  display: inline-flex;
  justify-content: center;
}

.podo-chip__prefix {
  height: 24px;
  width: 24px;
}

.podo-chip__suffix {
  height: 20px;
  width: 20px;
}

.podo-chip[data-size="sm"] .podo-chip__prefix,
.podo-chip[data-size="sm"] .podo-chip__suffix {
  height: 16px;
  width: 16px;
}

/* Switch (Figma 338:2464): pill track with a shadowed sliding handle.
   sm 30x18/handle 14, md 40x24/handle 20 (base), lg 56x32/handle 25. */
.podo-switch {
  background: var(--podo-switch-root-background, #D1D2D6);
  border: 0;
  border-radius: 9999px;
  cursor: pointer;
  display: inline-block;
  padding: 0;
  position: relative;
  transition: background 0.15s ease;
}

.podo-switch__handle {
  background: var(--podo-switch-handle-background, #FFFFFF);
  border-radius: 9999px;
  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.08);
  left: 2px;
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
  transition: left 0.15s ease;
}

.podo-switch[data-size="sm"] {
  height: 18px;
  width: 30px;
}
.podo-switch[data-size="sm"] .podo-switch__handle {
  height: 14px;
  width: 14px;
}
.podo-switch[data-size="sm"][data-state="on"] .podo-switch__handle {
  left: 14px;
}

.podo-switch[data-size="md"] {
  height: 24px;
  width: 40px;
}
.podo-switch[data-size="md"] .podo-switch__handle {
  height: 20px;
  width: 20px;
}
.podo-switch[data-size="md"][data-state="on"] .podo-switch__handle {
  left: 18px;
}

.podo-switch[data-size="lg"] {
  height: 32px;
  width: 56px;
}
.podo-switch[data-size="lg"] .podo-switch__handle {
  height: 25px;
  left: 4px;
  width: 25px;
}
.podo-switch[data-size="lg"][data-state="on"] .podo-switch__handle {
  left: 27px;
}

.podo-switch[data-state="on"] {
  --podo-switch-root-background: #426CED;
}

.podo-switch:focus-visible {
  outline: 2px solid #426CED;
  outline-offset: 2px;
}

.podo-switch[disabled] {
  --podo-switch-root-background: #E4E4E7;
  --podo-switch-handle-background: #D1D2D6;
  cursor: not-allowed;
}

.podo-switch[disabled] .podo-switch__handle {
  box-shadow: none;
}

/* Input (Figma 538:6693): wrapper carries the box + states, the inner control
   is borderless so prefix/suffix content can live inside the input. */
.podo-input {
  align-items: center;
  background: var(--podo-input-root-background, var(--podo-component-input-background, #FFFFFF));
  border: 1px solid
    var(--podo-input-root-borderColor, var(--podo-component-input-border, #E4E4E7));
  border-radius: 10px;
  display: flex;
  font-size: 16px;
  gap: 6px;
  line-height: 1.6;
  min-height: 42px;
  padding: 0 10px 0 16px;
}

.podo-input[data-size="lg"] {
  border-radius: 12px;
  min-height: 52px;
}

.podo-input:hover:not([data-state]):not(:focus-within) {
  border-color: var(--podo-semantic-color-text-muted, #9FA2AD);
}

/* Figma focused = 2px primary border; inset shadow adds the second pixel
   without shifting layout. */
.podo-input:focus-within:not([data-state="disabled"]) {
  border-color: #426CED;
  box-shadow: inset 0 0 0 1px #426CED;
}

.podo-input[data-state="invalid"] {
  border-color: var(--podo-semantic-color-text-danger, #F23B3B);
}

.podo-input[data-state="disabled"] {
  background: #E4E4E7;
  border-color: #D1D2D6;
}

.podo-input__control {
  background: transparent;
  border: 0;
  color: var(--podo-input-text-color, var(--podo-semantic-color-text-default, #18181B));
  flex: 1 1 0;
  font: inherit;
  min-width: 0;
  outline: none;
  padding: 0;
}

.podo-input__control::placeholder {
  color: var(--podo-semantic-color-text-muted, #9FA2AD);
}

.podo-input[data-state="disabled"] .podo-input__control {
  color: #9FA2AD;
  cursor: not-allowed;
}

.podo-input__prefix,
.podo-input__suffix-icon {
  align-items: center;
  color: var(--podo-semantic-color-text-muted, #9FA2AD);
  display: inline-flex;
  height: 24px;
  justify-content: center;
  width: 24px;
}

/* Icons sharpen from muted to gray.50 while the value is being edited
   (Figma icon/subtil #767985). */
.podo-input:focus-within .podo-input__prefix,
.podo-input:focus-within .podo-input__suffix-icon {
  color: #767985;
}

.podo-input__suffix-text {
  color: var(--podo-input-suffix-text-color, var(--podo-semantic-color-text-subtle, #50555E));
}

/* Field (Figma 538:6691): heading(label + requirement + sub-label + suffix-icon),
   free control slot, footer(helper-text/error + character count). */
.podo-field {
  display: flex;
  flex-direction: column;
  gap: var(--podo-spacing-component-field-gap, 6px);
}

.podo-field__heading {
  align-items: center;
  display: flex;
  gap: 2px;
}

.podo-field__label {
  align-items: baseline;
  color: var(--podo-field-label-color, var(--podo-semantic-color-text-subtle, #50555E));
  display: inline-flex;
  flex: 1 1 0;
  font-size: 14px;
  font-weight: 600;
  gap: 2px;
  line-height: 1.6;
}

.podo-field__requirement {
  color: var(--podo-field-requirement-color, var(--podo-semantic-color-text-danger, #F23B3B));
  font-size: 13px;
  font-weight: 600;
}

.podo-field__sub-label {
  color: var(--podo-field-sub-label-color, var(--podo-semantic-color-text-muted, #9FA2AD));
  font-size: 13px;
  font-weight: 400;
}

.podo-field__suffix-icon {
  align-items: center;
  color: var(--podo-semantic-color-text-subtle, #50555E);
  display: inline-flex;
  height: 20px;
  justify-content: center;
  width: 20px;
}

.podo-field__footer {
  align-items: center;
  display: flex;
  font-size: 14px;
  gap: 2px;
  line-height: 1.6;
}

.podo-field__helper-text {
  color: var(--podo-field-helper-text-color, var(--podo-semantic-color-text-muted, #9FA2AD));
  flex: 1 1 0;
}

.podo-field__error {
  color: var(--podo-field-error-color, var(--podo-semantic-color-text-danger, #F23B3B));
  flex: 1 1 0;
}

.podo-field__count {
  color: var(--podo-field-count-color, var(--podo-semantic-color-text-muted, #9FA2AD));
  margin-left: auto;
}

.podo-icon {
  color: var(--podo-icon-glyph-color, var(--podo-semantic-color-text-default, currentColor));
  font-family: "PodoIcons";
  line-height: 1;
}

.podo-text {
  color: var(--podo-typography-root-color, var(--podo-semantic-color-text-default, #14151A));
  font-family: var(--podo-typography-body-medium-fontFamily, inherit);
  font-size: var(--podo-typography-body-medium-fontSize, 1rem);
  line-height: var(--podo-typography-body-medium-lineHeight, 1.5);
}

.podo-text[data-as="h1"] {
  font-family: var(--podo-typography-heading-xlarge-fontFamily, inherit);
  font-size: var(--podo-typography-heading-xlarge-fontSize, 2rem);
  font-weight: var(--podo-typography-heading-xlarge-fontWeight, 700);
  line-height: var(--podo-typography-heading-xlarge-lineHeight, 1.2);
}</style>
<button class="podo-switch" part="root" type="button" role="switch" aria-checked="true" aria-label="알림" data-size="md" data-state="on">
  <span class="podo-switch__handle" part="handle"></span>
</button>"
`;

exports[`@podo/web > renders input, field, icon, and typography components > text 1`] = `
"<style>:host {
  box-sizing: border-box;
  font: inherit;
}

:host([fill]) {
  display: block;
  width: 100%;
}

button,
input {
  box-sizing: border-box;
  font: inherit;
}

.podo-button {
  align-items: center;
  justify-content: center;
  background: var(--podo-button-root-background, #426CED);
  border: 1px solid var(--podo-button-root-borderColor, transparent);
  border-radius: 10px;
  color: var(--podo-button-label-color, #FFFFFF);
  cursor: pointer;
  display: inline-flex;
  font-family: var(--podo-typography-body-medium-fontFamily, "Pretendard", sans-serif);
  font-weight: 400;
  gap: 6px;
  line-height: 1.6;
  min-height: 42px;
  min-width: 80px;
  padding: 2px 16px;
}

.podo-button__icon {
  align-items: center;
  color: var(--podo-button-icon-color, var(--podo-button-label-color, currentColor));
  display: inline-flex;
}

/* fill stretches the button to the parent's full width (auto-layout fill). */
.podo-button[data-fill="true"] {
  width: 100%;
}

/* Sizes (Figma: xs 32 / sm 36 / md 42 / lg 52) */
.podo-button[data-size="xs"] {
  border-radius: 6px;
  font-size: 14px;
  min-height: 32px;
  padding: 2px 10px;
}
.podo-button[data-size="sm"] {
  border-radius: 8px;
  font-size: 14px;
  min-height: 36px;
  padding: 2px 16px;
}
.podo-button[data-size="md"] {
  border-radius: 10px;
  font-size: 16px;
  min-height: 42px;
  padding: 2px 16px;
}
.podo-button[data-size="lg"] {
  border-radius: 12px;
  font-size: 16px;
  min-height: 52px;
  padding: 2px 20px;
}

/* Themes (Figma solid/outline x primary/assistive/white) */
.podo-button[data-theme="solid-primary"] {
  --podo-button-root-background: #426CED;
  --podo-button-label-color: #FFFFFF;
}
.podo-button[data-theme="solid-primary"]:hover:not([disabled]) {
  --podo-button-root-background: #1245E2;
}
.podo-button[data-theme="solid-primary"]:active:not([disabled]) {
  --podo-button-root-background: #123BBA;
}
.podo-button[data-theme="solid-assistive"] {
  --podo-button-root-background: #F4F4F5;
  --podo-button-label-color: #18181B;
}
.podo-button[data-theme="solid-assistive"]:hover:not([disabled]) {
  --podo-button-root-background: #E4E4E7;
}
.podo-button[data-theme="solid-white"] {
  --podo-button-root-background: #FFFFFF;
  --podo-button-label-color: #18181B;
}
.podo-button[data-theme="solid-white"]:hover:not([disabled]) {
  --podo-button-root-background: #F4F4F5;
}
.podo-button[data-theme="outline-primary"] {
  --podo-button-root-background: #FFFFFF;
  --podo-button-root-borderColor: #426CED;
  --podo-button-label-color: #426CED;
}
.podo-button[data-theme="outline-primary"]:hover:not([disabled]) {
  --podo-button-root-background: #F4F7FE;
}
.podo-button[data-theme="outline-assistive"] {
  --podo-button-root-background: #F9F9F9;
  --podo-button-root-borderColor: #D1D2D6;
  --podo-button-label-color: #18181B;
}
.podo-button[data-theme="outline-assistive"]:hover:not([disabled]) {
  --podo-button-root-background: #F4F4F5;
}
.podo-button[data-theme="outline-white"] {
  --podo-button-root-background: #FFFFFF;
  --podo-button-root-borderColor: #D1D2D6;
  --podo-button-label-color: #18181B;
}
.podo-button[data-theme="outline-white"]:hover:not([disabled]) {
  --podo-button-root-background: #F9F9F9;
}

.podo-button:focus-visible {
  outline: 2px solid #426CED;
  outline-offset: 2px;
}

.podo-button[disabled] {
  --podo-button-root-background: #E4E4E7;
  --podo-button-root-borderColor: transparent;
  --podo-button-label-color: #9FA2AD;
  cursor: not-allowed;
}

/* Chip (Figma 538:6615): pill tag with prefix/suffix icon slots. */
.podo-chip {
  align-items: center;
  background: var(--podo-chip-root-background, #3E424B);
  border: 1px solid var(--podo-chip-root-borderColor, transparent);
  border-radius: 9999px;
  color: var(--podo-chip-label-color, #FFFFFF);
  cursor: pointer;
  display: inline-flex;
  font-family: var(--podo-typography-body-medium-fontFamily, "Pretendard", sans-serif);
  font-size: 16px;
  font-weight: 400;
  gap: 4px;
  justify-content: center;
  line-height: 1.6;
  min-width: 55px;
  padding: 2px 8px;
}

.podo-chip[data-size="sm"] {
  font-size: 13px;
}

/* Figma outline-strong currently renders identically to solid (filled
   gray.70); mirrored as-is pending a design fix. */
.podo-chip[data-theme="outline-strong"] {
  --podo-chip-root-background: #3E424B;
  --podo-chip-label-color: #FFFFFF;
}

.podo-chip[data-theme="outline-weak"] {
  --podo-chip-root-background: #F9F9F9;
  --podo-chip-root-borderColor: #767985;
  --podo-chip-label-color: #18181B;
}

.podo-chip[data-theme="solid"]:active:not([disabled]),
.podo-chip[data-theme="outline-strong"]:active:not([disabled]) {
  --podo-chip-root-background: #767985;
}

.podo-chip:focus-visible {
  outline: 2px solid #426CED;
  outline-offset: 2px;
}

.podo-chip[disabled] {
  --podo-chip-root-background: #E4E4E7;
  --podo-chip-root-borderColor: transparent;
  --podo-chip-label-color: #9FA2AD;
  cursor: not-allowed;
}

.podo-chip__prefix,
.podo-chip__suffix {
  align-items: center;
  color: var(--podo-chip-label-color, currentColor);
  display: inline-flex;
  justify-content: center;
}

.podo-chip__prefix {
  height: 24px;
  width: 24px;
}

.podo-chip__suffix {
  height: 20px;
  width: 20px;
}

.podo-chip[data-size="sm"] .podo-chip__prefix,
.podo-chip[data-size="sm"] .podo-chip__suffix {
  height: 16px;
  width: 16px;
}

/* Switch (Figma 338:2464): pill track with a shadowed sliding handle.
   sm 30x18/handle 14, md 40x24/handle 20 (base), lg 56x32/handle 25. */
.podo-switch {
  background: var(--podo-switch-root-background, #D1D2D6);
  border: 0;
  border-radius: 9999px;
  cursor: pointer;
  display: inline-block;
  padding: 0;
  position: relative;
  transition: background 0.15s ease;
}

.podo-switch__handle {
  background: var(--podo-switch-handle-background, #FFFFFF);
  border-radius: 9999px;
  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.08);
  left: 2px;
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
  transition: left 0.15s ease;
}

.podo-switch[data-size="sm"] {
  height: 18px;
  width: 30px;
}
.podo-switch[data-size="sm"] .podo-switch__handle {
  height: 14px;
  width: 14px;
}
.podo-switch[data-size="sm"][data-state="on"] .podo-switch__handle {
  left: 14px;
}

.podo-switch[data-size="md"] {
  height: 24px;
  width: 40px;
}
.podo-switch[data-size="md"] .podo-switch__handle {
  height: 20px;
  width: 20px;
}
.podo-switch[data-size="md"][data-state="on"] .podo-switch__handle {
  left: 18px;
}

.podo-switch[data-size="lg"] {
  height: 32px;
  width: 56px;
}
.podo-switch[data-size="lg"] .podo-switch__handle {
  height: 25px;
  left: 4px;
  width: 25px;
}
.podo-switch[data-size="lg"][data-state="on"] .podo-switch__handle {
  left: 27px;
}

.podo-switch[data-state="on"] {
  --podo-switch-root-background: #426CED;
}

.podo-switch:focus-visible {
  outline: 2px solid #426CED;
  outline-offset: 2px;
}

.podo-switch[disabled] {
  --podo-switch-root-background: #E4E4E7;
  --podo-switch-handle-background: #D1D2D6;
  cursor: not-allowed;
}

.podo-switch[disabled] .podo-switch__handle {
  box-shadow: none;
}

/* Input (Figma 538:6693): wrapper carries the box + states, the inner control
   is borderless so prefix/suffix content can live inside the input. */
.podo-input {
  align-items: center;
  background: var(--podo-input-root-background, var(--podo-component-input-background, #FFFFFF));
  border: 1px solid
    var(--podo-input-root-borderColor, var(--podo-component-input-border, #E4E4E7));
  border-radius: 10px;
  display: flex;
  font-size: 16px;
  gap: 6px;
  line-height: 1.6;
  min-height: 42px;
  padding: 0 10px 0 16px;
}

.podo-input[data-size="lg"] {
  border-radius: 12px;
  min-height: 52px;
}

.podo-input:hover:not([data-state]):not(:focus-within) {
  border-color: var(--podo-semantic-color-text-muted, #9FA2AD);
}

/* Figma focused = 2px primary border; inset shadow adds the second pixel
   without shifting layout. */
.podo-input:focus-within:not([data-state="disabled"]) {
  border-color: #426CED;
  box-shadow: inset 0 0 0 1px #426CED;
}

.podo-input[data-state="invalid"] {
  border-color: var(--podo-semantic-color-text-danger, #F23B3B);
}

.podo-input[data-state="disabled"] {
  background: #E4E4E7;
  border-color: #D1D2D6;
}

.podo-input__control {
  background: transparent;
  border: 0;
  color: var(--podo-input-text-color, var(--podo-semantic-color-text-default, #18181B));
  flex: 1 1 0;
  font: inherit;
  min-width: 0;
  outline: none;
  padding: 0;
}

.podo-input__control::placeholder {
  color: var(--podo-semantic-color-text-muted, #9FA2AD);
}

.podo-input[data-state="disabled"] .podo-input__control {
  color: #9FA2AD;
  cursor: not-allowed;
}

.podo-input__prefix,
.podo-input__suffix-icon {
  align-items: center;
  color: var(--podo-semantic-color-text-muted, #9FA2AD);
  display: inline-flex;
  height: 24px;
  justify-content: center;
  width: 24px;
}

/* Icons sharpen from muted to gray.50 while the value is being edited
   (Figma icon/subtil #767985). */
.podo-input:focus-within .podo-input__prefix,
.podo-input:focus-within .podo-input__suffix-icon {
  color: #767985;
}

.podo-input__suffix-text {
  color: var(--podo-input-suffix-text-color, var(--podo-semantic-color-text-subtle, #50555E));
}

/* Field (Figma 538:6691): heading(label + requirement + sub-label + suffix-icon),
   free control slot, footer(helper-text/error + character count). */
.podo-field {
  display: flex;
  flex-direction: column;
  gap: var(--podo-spacing-component-field-gap, 6px);
}

.podo-field__heading {
  align-items: center;
  display: flex;
  gap: 2px;
}

.podo-field__label {
  align-items: baseline;
  color: var(--podo-field-label-color, var(--podo-semantic-color-text-subtle, #50555E));
  display: inline-flex;
  flex: 1 1 0;
  font-size: 14px;
  font-weight: 600;
  gap: 2px;
  line-height: 1.6;
}

.podo-field__requirement {
  color: var(--podo-field-requirement-color, var(--podo-semantic-color-text-danger, #F23B3B));
  font-size: 13px;
  font-weight: 600;
}

.podo-field__sub-label {
  color: var(--podo-field-sub-label-color, var(--podo-semantic-color-text-muted, #9FA2AD));
  font-size: 13px;
  font-weight: 400;
}

.podo-field__suffix-icon {
  align-items: center;
  color: var(--podo-semantic-color-text-subtle, #50555E);
  display: inline-flex;
  height: 20px;
  justify-content: center;
  width: 20px;
}

.podo-field__footer {
  align-items: center;
  display: flex;
  font-size: 14px;
  gap: 2px;
  line-height: 1.6;
}

.podo-field__helper-text {
  color: var(--podo-field-helper-text-color, var(--podo-semantic-color-text-muted, #9FA2AD));
  flex: 1 1 0;
}

.podo-field__error {
  color: var(--podo-field-error-color, var(--podo-semantic-color-text-danger, #F23B3B));
  flex: 1 1 0;
}

.podo-field__count {
  color: var(--podo-field-count-color, var(--podo-semantic-color-text-muted, #9FA2AD));
  margin-left: auto;
}

.podo-icon {
  color: var(--podo-icon-glyph-color, var(--podo-semantic-color-text-default, currentColor));
  font-family: "PodoIcons";
  line-height: 1;
}

.podo-text {
  color: var(--podo-typography-root-color, var(--podo-semantic-color-text-default, #14151A));
  font-family: var(--podo-typography-body-medium-fontFamily, inherit);
  font-size: var(--podo-typography-body-medium-fontSize, 1rem);
  line-height: var(--podo-typography-body-medium-lineHeight, 1.5);
}

.podo-text[data-as="h1"] {
  font-family: var(--podo-typography-heading-xlarge-fontFamily, inherit);
  font-size: var(--podo-typography-heading-xlarge-fontSize, 2rem);
  font-weight: var(--podo-typography-heading-xlarge-fontWeight, 700);
  line-height: var(--podo-typography-heading-xlarge-lineHeight, 1.2);
}</style><span class="podo-text podo-typography" data-as="h1" part="text"><slot></slot></span>"
`;
